# NoticiasCrew

./: README.md  pyproject.toml  report.md
src/crew_noticias/: crew.py  main.py
src/crew_noticias/config/: agents.yaml  task_config.yaml  tasks.yaml
